# IPA

./: CMakeLists.txt  IPAConfig.h.in
include/: correlation.h  entrophy.h  hash.h  myrbtree.h  sniffex.h
src/: correlation.c  entrophy.c  hash.c  main.c  myrbtree.c  sniffex.c
